2016-01-06  Mike Frysinger  <vapier@gentoo.org>

	* remote-sim.h (sim_open): Mark argv const.
	(sim_create_inferior): Mark argv and env const.

2015-11-24  Nick Clifton  <nickc@redhat.com>

	* sim-aarch64.h: New file.

2015-11-15  Mike Frysinger  <vapier@gentoo.org>

	* sim-cr16.h (SIM_CR16_MEMORY_UNIFIED, SIM_CR16_MEMORY_INSN,
	SIM_CR16_MEMORY_DATA, SIM_CR16_MEMORY_DMAP, SIM_CR16_MEMORY_IMAP):
	Delete.

2015-11-14  Mike Frysinger  <vapier@gentoo.org>

	* sim-arm.h: Delete __cplusplus checks and extern "C" linkage.
	* sim-cr16.h, sim-d10v.h, sim-frv.h, sim-h8300.h, sim-lm32.h,
	sim-sh.h: Likewise.

2015-11-10  Mike Frysinger  <vapier@gentoo.org>

	* sim-cr16.h (sim_cr16_translate_dmap_addr): Delete.
	(sim_cr16_translate_imap_addr): Likewise.
	(sim_cr16_translate_addr): Likewise.
	* sim-d10v.h (sim_d10v_translate_dmap_addr): Delete.
	(sim_d10v_translate_imap_addr): Likewise.
	(sim_d10v_translate_addr): Likewise.

2015-06-17  Mike Frysinger  <vapier@gentoo.org>

	* callback.h (CB_TARGET_DEFS_MAP): Add name member.
	(cb_host_str_syscall, cb_host_str_errno, cb_host_str_signal,
	cb_target_str_syscall, cb_target_str_errno, cb_target_str_signal):
	Declare.

2015-03-28  James Bowman  <james.bowman@ftdichip.com>

	* sim-ft32.h: New file.

2015-05-15  Mike Frysinger  <vapier@gentoo.org>

	* remote-sim.h (struct host_callback_struct): Define.

2015-01-31  Doug Evans  <xdje42@gmail.com>

	* section-scripts.h: Remove "future extension" comment.
	(SECTION_SCRIPT_ID_PYTHON_TEXT): New macro.
	(SECTION_SCRIPT_ID_SCHEME_TEXT): New macro.

2014-12-03  Joel Brobecker  <brobecker@adacore.com>

	* callback.h (struct host_callback_struct) <to_stat>: Renamed
	from "stat".
	<to_fstat>: Renamed from "fstat".
	<to_lstat>: Renamed from "lstat".

2014-03-10  Mike Frysinger  <vapier@gentoo.org>

	* remote-sim.h (sim_do_command): Add const to cmd.

2014-03-05  Alan Modra  <amodra@gmail.com>

	Update copyright notice.

2014-03-05  Mike Frysinger  <vapier@gentoo.org>
